# pr2_robot_calibration

./: CMakeLists.txt  README.md  package.xml
config/: calibrate_left.yaml  calibrate_right.yaml  capture_left_checkerboard.yaml  capture_right_checkerboard.yaml  left_checkerboard_poses.bag  right_checkerboard_poses.bag
launch/: calibrate_left.launch  calibrate_right.launch  capture_left_checkerboards.launch  capture_right_checkerboards.launch  move_group.launch  planning_context.launch
