<package>
  <name>pr2_robot_calibration</name>
  <version>0.1.0</version>
  <description>
    Launch and configuration files for calibrating the PR2 using the 'robot_calibration' package.
  </description>
  <author>Justin Huang</author>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>Apache2</license>
  <url>http://ros.org/wiki/fetch_calibration</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend version_gte="0.5.1">robot_calibration</run_depend>
</package>
